tests/ui-stable/diagnostic-not-implemented-immutable.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::Immutable` is not satisfied
  --> tests/ui-stable/diagnostic-not-implemented-immutable.rs:18:23
   |
18 |     takes_immutable::<NotZerocopy>();
   |                       ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zerocopy::Immutable` is not implemented for `NotZerocopy`
  --> tests/ui-stable/../../zerocopy-derive/tests/include.rs:48:5
   |
48 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::Immutable`:
             &T
             &mut T
             ()
             *const T
             *mut T
             AU16
             F32<O>
             F64<O>
           and 101 others
note: required by a bound in `takes_immutable`
  --> tests/ui-stable/diagnostic-not-implemented-immutable.rs:21:23
   |
21 | fn takes_immutable<T: Immutable>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_immutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
